# hft-simulation

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: Architecture.drawio
images/: Architecture.drawio
notebooks/: Order Book.ipynb
src/de_pet_project/: __init__.py
src/de_pet_project/exchange_connector/: __init__.py  deribit_websocket.py  message_processor.py  websocket_manager.py  websocket_processor.py
src/de_pet_project/exchange_connector/utils/: redis_producer.py
src/de_pet_project/processing_engine/: __init__.py  redis_consumer.py  stream_processor.py
src/de_pet_project/shared_utils/: grafana_connector.py  grafana_metric.py  order_book.py  redis_client.py
src/hft_simulation/: __init__.py
src/hft_simulation/exchange_connector/: __init__.py  deribit_connector.py  deribit_processor.py  deribit_websocket.py  websocket_processor.py
src/hft_simulation/exchange_connector/utils/: offset.py  redis_producer.py  websocket_manager.py
src/hft_simulation/execution_engine/: __init__.py  trade.py
src/hft_simulation/processing_engine/: __init__.py  redis_consumer.py
src/hft_simulation/processing_engine/models/: adaptive_random_forest.py  aggregated_mondrian_forest.py  online_model.py
src/hft_simulation/processing_engine/utils/: db_connector.py  stream_processor.py  table_schema.py
src/hft_simulation/shared_utils/: grafana_connector.py  grafana_metric.py  message_processor.py  mongo_connector.py  order_book.py  redis_client.py
tests/exchange_connector/: redis_producer_test.py
tests/shared_utils/: order_book_test.py
