[project]
name = "de-pet-project"
version = "0.1.0"
description = "Algorithmic Trading Simulation"
readme = "README.md"
authors = [{ name = "mlapid-ya", email = "m.lapid@yandex.ru" }]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "websockets>=14.2",
]

[project.scripts]
de-pet-project = "de_pet_project:main"
exchange-connector = "de_pet_project.exchange_connector:main"
processing-engine = "de_pet_project.processing_engine:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.3"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
